@@ -5,7 +5,7 @@ from cms.test_utils.project.sampleapp.models import Picture, Category
 class PictureInline(admin.StackedInline):
     model = Picture
 
-class CategoryAdmin(PlaceholderAdmin):
+class CategoryAdmin(PlaceholderAdmin, admin.ModelAdmin):
     inlines = [PictureInline]
 
 admin.site.register(Category, CategoryAdmin)
